@@ -702,12 +702,12 @@ function on_return_submit(event){
                    $button{approve} = { 
                        ndx   => 3, 
                        key   => 'O', 
-                       value => $locale->text('Post as Saved') };
+                       value => $locale->text('Post') };
                    if (grep /^lsmb_$form->{company}__draft_modify$/, @{$form->{_roles}}){
                        $button{edit_and_save} = { 
                            ndx   => 4, 
                            key   => 'E', 
-                           value => $locale->text('Save as Shown') };
+                           value => $locale->text('Save Draft') };
                    }
               }
                delete $button{$_}
